full functionality; need to fix display bleed-over/rounding

--- a/style.css
+++ b/style.css
@@ -1,8 +1,21 @@
+* {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 #calcArea {
     display: flex;
     width: 400px;
     height: 400px;
     flex-direction: column;
+    background-color: #8a8888;
+    padding: 8px;
+}
+
+#display {
+    background-color: #d2ffbe;
+    padding: 8px 4px;
+    margin: 4px 0 16px 0;
+    text-align: right;
 }
 
 .row {
